--- a/conf/config.json
+++ b/conf/config.json
@@ -20,6 +20,6 @@
         "hostport": "3306",
         "charset": "utf8mb4",
         "prefix": "cmf_",
-        "authcode" : "KFHlk2ubIlMr5ltqaD"
+        "authcode" : "XVlBzgbaiCMRAjWwhT"
     }
 }
