--- a/conf/config.json
+++ b/conf/config.json
@@ -1,25 +1,35 @@
 {
-    "app": {
-        "port": "4000",
-        "appName": "",
-        "appDebug": true,
-        "domain": "http://localhost:4000"
+  "app": {
+    "port": "4000",
+    "appName": "",
+    "appDebug": true,
+    "domain": "http://localhost:4000"
+  },
+  "template": {
+    "theme": "default",
+    "themePath": "public/themes",
+    "glob": "**/**/*.html",
+    "Static": "*/public/assets"
+  },
+  "database": {
+    "default": "mysql",
+    "mysql": {
+      "type": "mysql",
+      "host": "127.0.0.1",
+      "database": "gincmf",
+      "username": "root",
+      "password": "123456",
+      "port": "3306",
+      "charset": "utf8mb4",
+      "prefix": "cmf_",
+      "authcode": "XVlBzgbaiCMRAjWwhT"
     },
-    "template":{
-        "theme":"default",
-        "themePath":"public/themes",
-        "glob":"**/**/*.html",
-        "Static":"*/public/assets"
-    },
-    "database": {
-        "type": "mysql",
-        "hostname": "127.0.0.1",
-        "database": "gincmf",
-        "username": "root",
-        "password": "123456",
-        "hostport": "3306",
-        "charset": "utf8mb4",
-        "prefix": "cmf_",
-        "authcode" : "XVlBzgbaiCMRAjWwhT"
+    "redis": {
+      "type": "redis",
+      "host": "127.0.0.1",
+      "password": "",
+      "port": "6379",
+      "database": 0
     }
+  }
 }
